--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <span>Student Project</span>
+        <span>welcome to the world of mine</span>
         <ul>
             <li class="active home"><a href="index.html">Home</a></li>
             <li class="register"><a href="register.html">Register</a></li>
